--- a/src/contacts.html
+++ b/src/contacts.html
@@ -6,8 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="../node_modules/aos/dist/aos.css" /> -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.min.css">
     <script defer src="js/script.min.js"></script>
     <title>Quick Repair</title>
@@ -16,7 +14,7 @@
 <body>
     <header>
         <div class="header">
-            <div data-aos="fade-down" data-aos-delay="50" class="container">
+            <div class="container">
                 <div class="theme-switch-wrapper">
                     <span id="toggle-icon">
                         <img src="icons/solar.svg" alt="иконка солнца">
@@ -46,7 +44,7 @@
             </div>
         </div>
         <div class="subheader">
-            <div data-aos="fade-down" class="container">
+            <div class="container">
                 <div class="subheader__logo">
                     <img class="icon-logo" src="icons/logo-light.svg" alt="логотип">
                     <div class="logo_text">
@@ -56,10 +54,9 @@
                 </div>
                 <nav>
                     <ul class="subheader__menu">
-                        <li><a class="subheader__menu_link subheader__menu_link-active" href="./index.html">О нас</a>
-                        </li>
+                        <li><a class="subheader__menu_link" href="./index.html">О нас</a></li>
                         <li><a class="subheader__menu_link" href="./catalog.html">Услуги</a></li>
-                        <li><a class="subheader__menu_link" href="./contacts.html">Контакты</a></li>
+                        <li><a class="subheader__menu_link subheader__menu_link-active" href="#">Контакты</a></li>
                     </ul>
                 </nav>
                 <div class="subheader__login-wrapper">
@@ -74,60 +71,53 @@
         <section class="hero">
             <div class="container">
                 <div class="hero__text">
-                    <h1 data-aos="fade-up" data-aos-delay="0" class="hero__text_title"><span
-                            class="text-bold text-green">Проблемы</span> <span class="text-bold">с компьютером?</span>
-                        <br> Мы найдем решение!</h1>
-                    <p data-aos="fade-up" data-aos-delay="50" class="hero__text_descr">Мы - профессионалы в ремонте
-                        ноутбуков и компьютерной техники с более
+                    <h1 class="hero__text_title"><span class="text-bold text-green">Проблемы</span> <span
+                            class="text-bold">с компьютером?</span> <br> Мы найдем решение!</h1>
+                    <p class="hero__text_descr">Мы - профессионалы в ремонте ноутбуков и компьютерной техники с более
                         чем 10-летним опытом.</p>
-                    <button data-aos="fade-up" data-aos-delay="100" class="button button-big">Посмотреть услуги</button>
+                    <button class="button button-big">Посмотреть услуги</button>
                 </div>
             </div>
         </section>
 
         <section class="about">
-            <h2 data-aos="zoom-in" class="title">О<span class="text-extrabold"> компании</span></h2>
+            <h2 class="title">О<span class="text-extrabold"> компании</span></h2>
             <div class="container">
                 <div class="about__text">
-                    <h3 data-aos="fade-right" data-aos-delay="50" class="about__text_subtitle">Успешно производим услуги
-                        компьютерного ремонта на протяжение уже
+                    <h3 class="about__text_subtitle">Успешно производим услуги компьютерного ремонта на протяжение уже
                         10 лет!</h3>
-                    <p data-aos="fade-right" data-aos-delay="100" class="about__text_paragraph">Наша компания
-                        предоставляет профессиональные услуги по ремонту
+                    <p class="about__text_paragraph">Наша компания предоставляет профессиональные услуги по ремонту
                         ноутбуков и компьютерной техники. Мы гарантируем высокое качество работы, быстрые сроки и
                         индивидуальный подход к каждому клиенту. </p>
-                    <p data-aos="fade-right" data-aos-delay="100" class="about__text_paragraph">Независимо от сложности
-                        поломки, мы всегда готовы помочь вернуть
+                    <p class="about__text_paragraph">Независимо от сложности поломки, мы всегда готовы помочь вернуть
                         ваше оборудование в отличное состояние!</p>
-                    <button data-aos="fade-right" data-aos-delay="150" class="button button-big">Узнать больше</button>
+                    <button class="button button-big">Узнать больше</button>
                 </div>
                 <div class="about__images">
-                    <img data-aos="fade-left" data-aos-delay="0" class="about__images-1" data-aos-offset="300"
-                        src="img/about-photos/pc-cpu.png" alt="процессор компьютера">
-                    <img data-aos="fade-left" data-aos-delay="150" class="about__images-2" data-aos-offset="300"
-                        src="img/about-photos/pc-motherboard.png" alt="материнская плата компьюетра">
+                    <img class="about__images-1" src="img/about-photos/pc-cpu.png" alt="процессор компьютера">
+                    <img class="about__images-2" src="img/about-photos/pc-motherboard.png"
+                        alt="материнская плата компьюетра">
                 </div>
             </div>
         </section>
 
         <section class="help">
-            <h2 data-aos="zoom-in" class="title title-light">чем мы можем <span class="text-extrabold">помочь</span>
-            </h2>
-            <h3 data-aos="zoom-in" data-aos-delay="100" class="subtitle">Вот как мы можем <span class="text-extrabold">помочь вам</span> </h3>
+            <h2 class="title title-light">чем мы можем <span class="text-extrabold">помочь</span></h2>
+            <h3 class="subtitle">Вот как мы можем <span class="text-extrabold">помочь вам</span> </h3>
             <div class="container">
                 <div class="help__wrapper">
-                    <div data-aos="zoom-in-right" data-aos-delay="150" class="help__wrapper_item">
+                    <div class="help__wrapper_item">
                         <img class="tool-icon" src="icons/tools.svg" alt="иконка иструментов">
                         <h4>Поддержка на сайте</h4>
                         <p>Онлайн-консультации и помощь через чат или форму обратной связи, чтобы быстро решить вашу
                             проблему.</p>
                     </div>
-                    <div data-aos="zoom-in" data-aos-delay="150" class="help__wrapper_item">
+                    <div class="help__wrapper_item">
                         <img class="headset-icon" src="icons/headset.svg" alt="иконка наушников">
                         <h4>Удаленная поддержка</h4>
                         <p>Настройка программного обеспечения и устранение сбоев без визита в сервисный центр.</p>
                     </div>
-                    <div data-aos="zoom-in-left" data-aos-delay="150" class="help__wrapper_item">
+                    <div class="help__wrapper_item">
                         <img class="stopwatch-icon" src="icons/stopwatch.svg" alt="иконка таймера">
                         <h4>Быстрый сервис</h4>
                         <p>Оперативное выполнение ремонта и услуг с минимальным временем ожидания.</p>
@@ -137,10 +127,10 @@
         </section>
 
         <section class="services">
-            <h2 data-aos="zoom-in" class="title title">наши <span class="text-extrabold">услуги</span></h2>
-            <h3 data-aos="zoom-in" data-aos-delay="100" class="subtitle subtitle-black">Исследуйте наши <span class="text-extrabold">услуги</span> </h3>
+            <h2 class="title title">наши <span class="text-extrabold">услуги</span></h2>
+            <h3 class="subtitle subtitle-black">Исследуйте наши <span class="text-extrabold">услуги</span> </h3>
             <div class="container">
-                <div data-aos="zoom-in-up" data-aos-delay="100" class="services__wrapper">
+                <div class="services__wrapper">
                     <div class="services__card services__card-1">
                         <div class="services__card_icon">
                             <img src="icons/smartphone-linear.svg" alt="иконка телефона">
@@ -169,7 +159,7 @@
                         <a href="#" class="services__card_link">Читать больше</a>
                     </div>
                 </div>
-                <div data-aos="zoom-in-up" data-aos-delay="100" data-aos-offset="0" class="services__dots">
+                <div class="services__dots">
                     <div class="services__dots_dot"></div>
                     <div class="services__dots_dot services__dots_dot-active"></div>
                     <div class="services__dots_dot"></div>
@@ -179,10 +169,10 @@
 
         <section class="reviews">
             <div class="container">
-                <h2 data-aos="zoom-in" class="title title">Отзывы</h2>
-                <h3 data-aos="zoom-in" data-aos-delay="100" class="subtitle subtitle-black">Что говорят <span class="text-extrabold">клиенты</span> </h3>
+                <h2 class="title title">Отзывы</h2>
+                <h3 class="subtitle subtitle-black">Что говорят <span class="text-extrabold">клиенты</span> </h3>
                 <div class="reviews__wrapper">
-                    <div data-aos="zoom-in-right" class="reviews__card">
+                    <div class="reviews__card">
                         <img src="img/review-users/пользователь-1.png" alt="пользователь с отзыва">
                         <div class="reviews__card_text">
                             <h5>Анна М., Грязовец</h5>
@@ -191,7 +181,7 @@
                                 и вежливым обслуживанием. Спасибо за скорость и профессионализм!"</p>
                         </div>
                     </div>
-                    <div data-aos="zoom-in-left" data-aos-delay="100" class="reviews__card">
+                    <div class="reviews__card">
                         <img src="img/review-users/пользователь-2.png" alt="пользователь с отзыва">
                         <div class="reviews__card_text">
                             <h5>Иван К., Вологда</h5>
@@ -200,7 +190,7 @@
                                 будущем!"</p>
                         </div>
                     </div>
-                    <div data-aos="zoom-in-right" data-aos-delay="200" class="reviews__card">
+                    <div class="reviews__card">
                         <img src="img/review-users/пользователь-3.png" alt="пользователь с отзыва">
                         <div class="reviews__card_text">
                             <h5>Екатерина Л., Вологда</h5>
@@ -208,7 +198,7 @@
                                 объяснили, что и как настроено. Отличный сервис, рекомендую!"</p>
                         </div>
                     </div>
-                    <div data-aos="zoom-in-left" data-aos-delay="300" class="reviews__card">
+                    <div class="reviews__card">
                         <img src="img/review-users/пользователь-4.png" alt="пользователь с отзыва">
                         <div class="reviews__card_text">
                             <h5>Сергей П., Грязовец</h5>
@@ -276,12 +266,6 @@
             </div>
         </div>
     </footer>
-
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <!-- <script src="../node_modules/aos/dist/aos.js"></script> -->
-    <script>
-        AOS.init();
-    </script>
 
 </body>
 
