--- a/src/index.html
+++ b/src/index.html
@@ -45,8 +45,8 @@
                 <button class="button">Заказать звонок</button>
             </div>
         </div>
-        <div class="subheader">
-            <div data-aos="fade-down" class="container">
+        <!-- <div class="subheader">
+            <div data-aos="zoom-in" class="container">
                 <div class="subheader__logo">
                     <img class="icon-logo" src="icons/logo-light.svg" alt="логотип">
                     <div class="logo_text">
@@ -67,7 +67,40 @@
                     <button><img class="log-icon" src="icons/login-light.svg" alt="вход"></button>
                 </div>
             </div>
+        </div> -->
+
+        <div class="subheader">
+            <div data-aos="zoom-in" class="container">
+                <div class="subheader__logo">
+                    <img class="icon-logo" src="icons/logo-light.svg" alt="логотип">
+                    <div class="logo_text">
+                        <div class="logo_title">Quick</div>
+                        <div class="logo_subtitle">Repair</div>
+                    </div>
+                </div>
+                <!-- Кнопка-гамбургер -->
+                <button class="hamburger" aria-label="Открыть меню">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+
+                <div class="subheader__login-wrapper">
+                    <button><img class="reg-icon" src="icons/register-light.svg" alt="регистрация"></button>
+                    <button><img class="log-icon" src="icons/login-light.svg" alt="вход"></button>
+                </div>
+            </div>
+            <!-- Меню -->
+            <nav class="subheader__menu-wrapper">
+                <ul class="subheader__menu-hamburger">
+                    <li><a class="subheader__menu_link subheader__menu_link-active" href="./index.html">О нас</a>
+                    </li>
+                    <li><a class="subheader__menu_link" href="./catalog.html">Услуги</a></li>
+                    <li><a class="subheader__menu_link" href="./contacts.html">Контакты</a></li>
+                </ul>
+            </nav>
         </div>
+
     </header>
 
     <main>
@@ -76,7 +109,8 @@
                 <div class="hero__text">
                     <h1 data-aos="fade-up" data-aos-delay="0" class="hero__text_title"><span
                             class="text-bold text-green">Проблемы</span> <span class="text-bold">с компьютером?</span>
-                        <br> Мы найдем решение!</h1>
+                        <br> Мы найдем решение!
+                    </h1>
                     <p data-aos="fade-up" data-aos-delay="50" class="hero__text_descr">Мы - профессионалы в ремонте
                         ноутбуков и компьютерной техники с более
                         чем 10-летним опытом.</p>
@@ -85,7 +119,7 @@
             </div>
         </section>
 
-        <section class="about">
+        <!-- <section class="about">
             <h2 data-aos="zoom-in" class="title">О<span class="text-extrabold"> компании</span></h2>
             <div class="container">
                 <div class="about__text">
@@ -218,11 +252,11 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
     </main>
 
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="container">
             <div class="footer__wrapper">
                 <div class="footer__logo">
@@ -251,7 +285,6 @@
                         </div>
                         <div class="footer__social_item">
                             <img class="icon-phone" src="icons/phone.svg" alt="Иконка телефона">
-                            <!-- FIXME -->
                             <a href="tel:+79815061868">+7 (981) 506-18-68</a>
                         </div>
                         <div class="footer__social_item">
@@ -275,7 +308,7 @@
                 Copyright 2024, ВСЕ ПРАВА ЗАЩИЩЕНЫ
             </div>
         </div>
-    </footer>
+    </footer> -->
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- <script src="../node_modules/aos/dist/aos.js"></script> -->
