--- a/src/contacts.html
+++ b/src/contacts.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="../node_modules/aos/dist/aos.css" /> -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.min.css">
     <script defer src="js/script.min.js"></script>
     <title>Quick Repair</title>
@@ -14,7 +16,7 @@
 <body>
     <header>
         <div class="header">
-            <div class="container">
+            <div data-aos="fade-down" data-aos-delay="50" class="container">
                 <div class="theme-switch-wrapper">
                     <span id="toggle-icon">
                         <img src="icons/solar.svg" alt="иконка солнца">
@@ -44,7 +46,7 @@
             </div>
         </div>
         <div class="subheader">
-            <div class="container">
+            <div data-aos="zoom-in" class="container">
                 <div class="subheader__logo">
                     <img class="icon-logo" src="icons/logo-light.svg" alt="логотип">
                     <div class="logo_text">
@@ -54,159 +56,64 @@
                 </div>
                 <nav>
                     <ul class="subheader__menu">
-                        <li><a class="subheader__menu_link" href="./index.html">О нас</a></li>
+                        <li><a class="subheader__menu_link" href="./index.html">О нас</a>
+                        </li>
                         <li><a class="subheader__menu_link" href="./catalog.html">Услуги</a></li>
-                        <li><a class="subheader__menu_link subheader__menu_link-active" href="#">Контакты</a></li>
+                        <li><a class="subheader__menu_link subheader__menu_link-active"
+                                href="./contacts.html">Контакты</a></li>
                     </ul>
                 </nav>
                 <div class="subheader__login-wrapper">
                     <button><img class="reg-icon" src="icons/register-light.svg" alt="регистрация"></button>
                     <button><img class="log-icon" src="icons/login-light.svg" alt="вход"></button>
                 </div>
+                <button class="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+            </div>
+            <div class="mobile-menu">
+                <ul class="mobile-menu__list">
+                    <li><a class="mobile-menu__link mobile-menu__link-active" href="./index.html">О нас</a></li>
+                    <li><a class="mobile-menu__link" href="./catalog.html">Услуги</a></li>
+                    <li><a class="mobile-menu__link" href="./contacts.html">Контакты</a></li>
+                </ul>
+                <div class="mobile-menu__login-wrapper">
+                    <button><img class="reg-icon" src="icons/register-light.svg" alt="регистрация"></button>
+                    <button><img class="log-icon" src="icons/login-light.svg" alt="вход"></button>
+                </div>
             </div>
         </div>
+
+
     </header>
 
     <main>
         <section class="hero">
             <div class="container">
                 <div class="hero__text">
-                    <h1 class="hero__text_title"><span class="text-bold text-green">Проблемы</span> <span
-                            class="text-bold">с компьютером?</span> <br> Мы найдем решение!</h1>
-                    <p class="hero__text_descr">Мы - профессионалы в ремонте ноутбуков и компьютерной техники с более
-                        чем 10-летним опытом.</p>
-                    <button class="button button-big">Посмотреть услуги</button>
+                    <h1 data-aos="fade-up" data-aos-delay="0" class="hero__text_title"><span
+                            class="text-bold text-green">Свяжитесь</span> <span class="text-bold">с нами?</span>
+                        <br> Мы найдем решение!
+                    </h1>
+                    <p data-aos="fade-up" data-aos-delay="50" class="hero__text_descr">Мы всегда на связи, чтобы
+                        ответить на ваши вопросы и помочь с ремонтом техники. Позвоните, напишите или посетите наш офис
+                        — мы рядом, когда это нужно!</p>
+                    <button data-aos="fade-up" data-aos-delay="100"
+                        class="button button-big button-center-phone">Оставить заявку</button>
                 </div>
             </div>
         </section>
 
-        <section class="about">
-            <h2 class="title">О<span class="text-extrabold"> компании</span></h2>
+        <section class="contacts">
+            <h2 data-aos="zoom-in" class="title">Контакты</h2>
+            <h3 data-aos="zoom-in" data-aos-delay="100" class="subtitle subtitle-black">Где мы <span
+                class="text-extrabold">находимся</span> </h3>
             <div class="container">
-                <div class="about__text">
-                    <h3 class="about__text_subtitle">Успешно производим услуги компьютерного ремонта на протяжение уже
-                        10 лет!</h3>
-                    <p class="about__text_paragraph">Наша компания предоставляет профессиональные услуги по ремонту
-                        ноутбуков и компьютерной техники. Мы гарантируем высокое качество работы, быстрые сроки и
-                        индивидуальный подход к каждому клиенту. </p>
-                    <p class="about__text_paragraph">Независимо от сложности поломки, мы всегда готовы помочь вернуть
-                        ваше оборудование в отличное состояние!</p>
-                    <button class="button button-big">Узнать больше</button>
-                </div>
-                <div class="about__images">
-                    <img class="about__images-1" src="img/about-photos/pc-cpu.png" alt="процессор компьютера">
-                    <img class="about__images-2" src="img/about-photos/pc-motherboard.png"
-                        alt="материнская плата компьюетра">
-                </div>
-            </div>
-        </section>
-
-        <section class="help">
-            <h2 class="title title-light">чем мы можем <span class="text-extrabold">помочь</span></h2>
-            <h3 class="subtitle">Вот как мы можем <span class="text-extrabold">помочь вам</span> </h3>
-            <div class="container">
-                <div class="help__wrapper">
-                    <div class="help__wrapper_item">
-                        <img class="tool-icon" src="icons/tools.svg" alt="иконка иструментов">
-                        <h4>Поддержка на сайте</h4>
-                        <p>Онлайн-консультации и помощь через чат или форму обратной связи, чтобы быстро решить вашу
-                            проблему.</p>
-                    </div>
-                    <div class="help__wrapper_item">
-                        <img class="headset-icon" src="icons/headset.svg" alt="иконка наушников">
-                        <h4>Удаленная поддержка</h4>
-                        <p>Настройка программного обеспечения и устранение сбоев без визита в сервисный центр.</p>
-                    </div>
-                    <div class="help__wrapper_item">
-                        <img class="stopwatch-icon" src="icons/stopwatch.svg" alt="иконка таймера">
-                        <h4>Быстрый сервис</h4>
-                        <p>Оперативное выполнение ремонта и услуг с минимальным временем ожидания.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="services">
-            <h2 class="title title">наши <span class="text-extrabold">услуги</span></h2>
-            <h3 class="subtitle subtitle-black">Исследуйте наши <span class="text-extrabold">услуги</span> </h3>
-            <div class="container">
-                <div class="services__wrapper">
-                    <div class="services__card services__card-1">
-                        <div class="services__card_icon">
-                            <img src="icons/smartphone-linear.svg" alt="иконка телефона">
-                        </div>
-                        <h4 class="services__card_title">Ремонт смартфона</h4>
-                        <p class="services__card_descr">Профессиональный ремонт любых моделей смартфонов, включая замену
-                            экранов, аккумуляторов и устранение программных сбоев.</p>
-                        <a href="#" class="services__card_link">Читать больше</a>
-                    </div>
-                    <div class="services__card services__card-2">
-                        <div class="services__card_icon">
-                            <img src="icons/smartphone-linear.svg" alt="иконка телефона">
-                        </div>
-                        <h4 class="services__card_title">Восстановление данных</h4>
-                        <p class="services__card_descr">Быстрое восстановление утраченных данных с жестких дисков,
-                            флешек и других носителей информации.</p>
-                        <a href="#" class="services__card_link">Читать больше</a>
-                    </div>
-                    <div class="services__card">
-                        <div class="services__card_icon">
-                            <img src="icons/smartphone-linear.svg" alt="иконка телефона">
-                        </div>
-                        <h4 class="services__card_title">Ремонт компьютера</h4>
-                        <p class="services__card_descr">Диагностика и устранение любых неисправностей компьютеров,
-                            включая замену комплектующих и настройку программного обеспечения.</p>
-                        <a href="#" class="services__card_link">Читать больше</a>
-                    </div>
-                </div>
-                <div class="services__dots">
-                    <div class="services__dots_dot"></div>
-                    <div class="services__dots_dot services__dots_dot-active"></div>
-                    <div class="services__dots_dot"></div>
-                </div>
-            </div>
-        </section>
-
-        <section class="reviews">
-            <div class="container">
-                <h2 class="title title">Отзывы</h2>
-                <h3 class="subtitle subtitle-black">Что говорят <span class="text-extrabold">клиенты</span> </h3>
-                <div class="reviews__wrapper">
-                    <div class="reviews__card">
-                        <img src="img/review-users/пользователь-1.png" alt="пользователь с отзыва">
-                        <div class="reviews__card_text">
-                            <h5>Анна М., Грязовец</h5>
-                            <p>"Обратилась с разбитым экраном ноутбука, все сделали за день! Очень довольна качеством
-                                работы
-                                и вежливым обслуживанием. Спасибо за скорость и профессионализм!"</p>
-                        </div>
-                    </div>
-                    <div class="reviews__card">
-                        <img src="img/review-users/пользователь-2.png" alt="пользователь с отзыва">
-                        <div class="reviews__card_text">
-                            <h5>Иван К., Вологда</h5>
-                            <p>"Нужно было восстановить данные с жесткого диска, думал, что все потеряно. Ребята не
-                                только вернули всю информацию, но и дали рекомендации, как избежать подобных проблем в
-                                будущем!"</p>
-                        </div>
-                    </div>
-                    <div class="reviews__card">
-                        <img src="img/review-users/пользователь-3.png" alt="пользователь с отзыва">
-                        <div class="reviews__card_text">
-                            <h5>Екатерина Л., Вологда</h5>
-                            <p>"Заказывала удаленную настройку программ на ноутбуке. Все сделали быстро и понятно
-                                объяснили, что и как настроено. Отличный сервис, рекомендую!"</p>
-                        </div>
-                    </div>
-                    <div class="reviews__card">
-                        <img src="img/review-users/пользователь-4.png" alt="пользователь с отзыва">
-                        <div class="reviews__card_text">
-                            <h5>Сергей П., Грязовец</h5>
-                            <p>"Компьютер перестал включаться, думал, что понадобится покупать новый. В сервисе всё
-                                починили за пару часов, да ещё и почистили систему от пыли. Отличная работа!"</p>
-                        </div>
-                    </div>
-                </div>
+                <iframe
+                    src="https://yandex.ru/map-widget/v1/?um=constructor%3A40009503927fbbbe53b6288e6d4a362716174108c1ad5d24668e8b05d865e9b1&amp;source=constructor"
+                    width="650" height="550" frameborder="0"></iframe>
             </div>
         </section>
 
@@ -241,7 +148,6 @@
                         </div>
                         <div class="footer__social_item">
                             <img class="icon-phone" src="icons/phone.svg" alt="Иконка телефона">
-                            <!-- FIXME -->
                             <a href="tel:+79815061868">+7 (981) 506-18-68</a>
                         </div>
                         <div class="footer__social_item">
@@ -266,6 +172,12 @@
             </div>
         </div>
     </footer>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- <script src="../node_modules/aos/dist/aos.js"></script> -->
+    <script>
+        AOS.init();
+    </script>
 
 </body>
 
